--- a/Inventory/Inventory.csproj
+++ b/Inventory/Inventory.csproj
@@ -104,6 +104,18 @@
     <Compile Include="Admin\brg_out.Designer.cs">
       <DependentUpon>brg_out.cs</DependentUpon>
     </Compile>
+    <Compile Include="Admin\his_out.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\his_out.Designer.cs">
+      <DependentUpon>his_out.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\stockbarang\Brg_add.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\stockbarang\Brg_add.Designer.cs">
+      <DependentUpon>Brg_add.cs</DependentUpon>
+    </Compile>
     <Compile Include="Admin\rwyt_brg_out.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +127,30 @@
     </Compile>
     <Compile Include="Admin\rwyt_brg_in.Designer.cs">
       <DependentUpon>rwyt_brg_in.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\suppliers\Sup_edit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\suppliers\Sup_edit.Designer.cs">
+      <DependentUpon>Sup_edit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\suppliers\Sup_add.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\suppliers\Sup_add.Designer.cs">
+      <DependentUpon>Sup_add.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\suppliers\supplier.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\suppliers\supplier.Designer.cs">
+      <DependentUpon>supplier.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\store\store.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\store\store.Designer.cs">
+      <DependentUpon>store.cs</DependentUpon>
     </Compile>
     <Compile Include="layout\sidebar.cs">
       <SubType>Form</SubType>
@@ -142,12 +178,18 @@
     <Compile Include="Auth\Register.Designer.cs">
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
-    <Compile Include="Admin\Stockbarang.cs">
+    <Compile Include="Admin\stockbarang\Stockbarang.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Admin\Stockbarang.Designer.cs">
+    <Compile Include="Admin\stockbarang\Stockbarang.Designer.cs">
       <DependentUpon>Stockbarang.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Admin\his_out.resx">
+      <DependentUpon>his_out.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin\stockbarang\Brg_add.resx">
+      <DependentUpon>Brg_add.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Admin\Brg_In.resx">
       <DependentUpon>Brg_In.cs</DependentUpon>
     </EmbeddedResource>
@@ -159,6 +201,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Admin\rwyt_brg_in.resx">
       <DependentUpon>rwyt_brg_in.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin\suppliers\Sup_edit.resx">
+      <DependentUpon>Sup_edit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin\suppliers\Sup_add.resx">
+      <DependentUpon>Sup_add.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin\suppliers\supplier.resx">
+      <DependentUpon>supplier.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin\store\store.resx">
+      <DependentUpon>store.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="layout\sidebar.resx">
       <DependentUpon>sidebar.cs</DependentUpon>
@@ -182,7 +236,7 @@
     <EmbeddedResource Include="Auth\Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Admin\Stockbarang.resx">
+    <EmbeddedResource Include="Admin\stockbarang\Stockbarang.resx">
       <DependentUpon>Stockbarang.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
@@ -529,5 +583,6 @@
   <ItemGroup>
     <None Include="Resources\WiFi.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
